# pivresearch

./: CMakeLists.txt  build.bat  cg.txt  readme.txt
quick/: CMakeLists.txt
quick/src/: quick.cpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/sort/: bubble.cpp  check.cpp  check.h  selection.cpp
util/: CMakeLists.txt
